syntax = "proto3";

package inventory.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

// NodeType describes supported Node types.
enum NodeType {
  NODE_TYPE_UNSPECIFIED = 0;
  NODE_TYPE_GENERIC_NODE = 1;
  NODE_TYPE_CONTAINER_NODE = 2;
  NODE_TYPE_REMOTE_NODE = 3;
  NODE_TYPE_REMOTE_RDS_NODE = 4;
  NODE_TYPE_REMOTE_AZURE_DATABASE_NODE = 5;
}

// GenericNode represents a bare metal server or virtual machine.
message GenericNode {
  // Unique randomly generated instance identifier.
  string node_id = 1;
  // Unique across all Nodes user-defined name.
  string node_name = 2;
  // Node address (DNS name or IP).
  string address = 3;
  // Linux machine-id.
  string machine_id = 4;
  // Linux distribution name and version.
  string distro = 5;
  // Node model.
  string node_model = 6;
  // Node region.
  string region = 7;
  // Node availability zone.
  string az = 8;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 9;
}

// ContainerNode represents a Docker container.
message ContainerNode {
  // Unique randomly generated instance identifier.
  string node_id = 1;
  // Unique across all Nodes user-defined name.
  string node_name = 2;
  // Node address (DNS name or IP).
  string address = 3;
  // Linux machine-id of the Generic Node where this Container Node runs.
  string machine_id = 4;
  // Container identifier. If specified, must be a unique Docker container identifier.
  string container_id = 5;
  // Container name.
  string container_name = 6;
  // Node model.
  string node_model = 7;
  // Node region.
  string region = 8;
  // Node availability zone.
  string az = 9;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 10;
}

// RemoteNode represents generic remote Node. It's a node where we don't run pmm-agents. Only external exporters can run on Remote Nodes.
message RemoteNode {
  // Unique randomly generated instance identifier.
  string node_id = 1;
  // Unique across all Nodes user-defined name.
  string node_name = 2;
  // Node address (DNS name or IP).
  string address = 3;
  // Node model.
  string node_model = 4;
  // Node region.
  string region = 5;
  // Node availability zone.
  string az = 6;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 7;
}

// RemoteRDSNode represents remote RDS Node. Agents can't run on Remote RDS Nodes.
message RemoteRDSNode {
  // Unique randomly generated instance identifier.
  string node_id = 1;
  // Unique across all Nodes user-defined name.
  string node_name = 2;
  // DB instance identifier.
  string address = 3;
  // Node model.
  string node_model = 4;
  // Node region.
  string region = 5;
  // Node availability zone.
  string az = 6;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 7;
  // AWS instance ID.
  string instance_id = 8;
}

// RemoteAzureDatabaseNode represents remote AzureDatabase Node. Agents can't run on Remote AzureDatabase Nodes.
message RemoteAzureDatabaseNode {
  // Unique randomly generated instance identifier.
  string node_id = 1;
  // Unique across all Nodes user-defined name.
  string node_name = 2;
  // DB instance identifier.
  string address = 3;
  // Node model.
  string node_model = 4;
  // Node region.
  string region = 5;
  // Node availability zone.
  string az = 6;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 7;
}

// List

message ListNodesRequest {
  // Return only Nodes with matching Node type.
  NodeType node_type = 1;
}

message ListNodesResponse {
  repeated GenericNode generic = 1;
  repeated ContainerNode container = 2;
  repeated RemoteNode remote = 3;
  repeated RemoteRDSNode remote_rds = 4;
  repeated RemoteAzureDatabaseNode remote_azure_database = 5;
}

// Get

message GetNodeRequest {
  // Unique randomly generated instance identifier.
  string node_id = 1 [(validate.rules).string.min_len = 1];
}

message GetNodeResponse {
  oneof node {
    GenericNode generic = 1;
    ContainerNode container = 2;
    RemoteNode remote = 3;
    RemoteRDSNode remote_rds = 4;
    RemoteAzureDatabaseNode remote_azure_database = 5;
  }
}

// Add any Node

message AddNodeRequest {
  oneof node {
    AddGenericNodeParams generic = 1;
    AddContainerNodeParams container = 2;
    AddRemoteNodeParams remote = 3;
    AddRemoteRDSNodeParams remote_rds = 4;
    AddRemoteAzureNodeParams remote_azure = 5;
  }
}

message AddNodeResponse {
  oneof node {
    GenericNode generic = 1;
    ContainerNode container = 2;
    RemoteNode remote = 3;
    RemoteRDSNode remote_rds = 4;
    RemoteAzureDatabaseNode remote_azure_database = 5;
  }
}

// Add Generic

message AddGenericNodeParams {
  // Unique across all Nodes user-defined name.
  string node_name = 1 [(validate.rules).string.min_len = 1];
  // Node address (DNS name or IP).
  string address = 2 [(validate.rules).string.min_len = 1];
  // Linux machine-id.
  string machine_id = 3;
  // Linux distribution name and version.
  string distro = 4;
  // Node model.
  string node_model = 5;
  // Node region.
  string region = 6;
  // Node availability zone.
  string az = 7;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 8;
}

// Add Container

message AddContainerNodeParams {
  // Unique across all Nodes user-defined name.
  string node_name = 1 [(validate.rules).string.min_len = 1];
  // Node address (DNS name or IP).
  string address = 2 [(validate.rules).string.min_len = 1];
  // Linux machine-id of the Generic Node where this Container Node runs.
  string machine_id = 3;
  // Container identifier. If specified, must be a unique Docker container identifier.
  string container_id = 4;
  // Container name.
  string container_name = 5;
  // Node model.
  string node_model = 6;
  // Node region.
  string region = 7;
  // Node availability zone.
  string az = 8;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 9;
}

// Add Remote

message AddRemoteNodeParams {
  // Unique across all Nodes user-defined name.
  string node_name = 1 [(validate.rules).string.min_len = 1];
  // Node address (DNS name or IP).
  string address = 2 [(validate.rules).string.min_len = 1];
  // Node model.
  string node_model = 3;
  // Node region.
  string region = 4;
  // Node availability zone.
  string az = 5;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 6;
}

// Add Remote RDS

message AddRemoteRDSNodeParams {
  // Unique across all Nodes user-defined name.
  string node_name = 1 [(validate.rules).string.min_len = 1];
  // DB instance identifier.
  string address = 2 [(validate.rules).string.min_len = 1];
  // Node model.
  string node_model = 3;
  // Node region.
  string region = 4 [(validate.rules).string.min_len = 1];
  // Node availability zone.
  string az = 5;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 6;
}

// Add Remote Azure database

message AddRemoteAzureNodeParams {
  // Unique across all Nodes user-defined name.
  string node_name = 1 [(validate.rules).string.min_len = 1];
  // DB instance identifier.
  string address = 2 [(validate.rules).string.min_len = 1];
  // Node model.
  string node_model = 3;
  // Node region.
  string region = 4 [(validate.rules).string.min_len = 1];
  // Node availability zone.
  string az = 5;
  // Custom user-assigned labels.
  map<string, string> custom_labels = 6;
}

// Remove

message RemoveNodeRequest {
  // Unique randomly generated instance identifier.
  string node_id = 1 [(validate.rules).string.min_len = 1];
  // Remove node with all dependencies.
  bool force = 2;
}

message RemoveNodeResponse {}

// Nodes service provides public methods for managing Nodes.
service NodesService {
  // ListNodes returns a list of all Nodes.
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {
    option (google.api.http) = {get: "/v1/inventory/nodes"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Nodes"
      description: "Returns a list of all Nodes."
    };
  }
  // GetNode returns a single Node by ID.
  rpc GetNode(GetNodeRequest) returns (GetNodeResponse) {
    option (google.api.http) = {get: "/v1/inventory/nodes/{node_id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get a Node"
      description: "Returns a single Node by ID."
    };
  }
  // AddNode adds any type of Node.
  rpc AddNode(AddNodeRequest) returns (AddNodeResponse) {
    option (google.api.http) = {
      post: "/v1/inventory/nodes"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add a Node"
      description: "Adds a Node."
    };
  }
  // RemoveNode removes a Node.
  rpc RemoveNode(RemoveNodeRequest) returns (RemoveNodeResponse) {
    option (google.api.http) = {delete: "/v1/inventory/nodes/{node_id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Remove a Node"
      description: "Removes a Node."
    };
  }
}
